<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.davidsalmon.android5778_8694_7928_01.controller.AddBracnh">

    <EditText
        android:id="@+id/CityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPostalAddress"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/StreetEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/street"
        android:inputType="textPostalAddress"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CityEditText" />

    <EditText
        android:id="@+id/BuildingNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/BuildingNumber"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StreetEditText" />

    <EditText
        android:id="@+id/ParkingSpacesNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ParkingSpacesNumber"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BuildingNumberEditText" />

    <EditText
        android:id="@+id/BranchNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/BranchNumber"

        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ParkingSpacesNumberEditText" />

    <Button
        android:id="@+id/addBranchButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/addBranch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BranchNumberEditText" />

</android.support.constraint.ConstraintLayout>
