<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.davidsalmon.android5778_8694_7928_01.controller.AddCar">

    <EditText
        android:id="@+id/CarNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CarNumber"
        android:inputType="textPostalAddress"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />


    <Button
        android:id="@+id/addCarButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="add "
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/KilometersEditText" />

    <EditText
        android:id="@+id/BranchNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Branch number"
        android:inputType="number"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ModelTypeEditText" />

    <EditText
        android:id="@+id/KilometersEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/Kilometers"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BranchNumberEditText" />

    <EditText
        android:id="@+id/ModelTypeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ModelType"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/CarNumberEditText"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
